srcs/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: my-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      app: my-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: yobasystems/alpine-nginx
        #       imagePullPolicy: Never
        ports:
         - containerPort: 80
         - containerPort: 443
