srcs/telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: influxdb
spec:
  ports:
    - port: 35000
  selector:
    app: influxdb
    tier: telegraf
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: influxdb
    tier: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: influxdb
        tier: telegraf
    spec:
      containers:
      - image: telegraf_alpine
        imagePullPolicy: Never
        name: telegraf
        ports:
        - containerPort: 35000
          name: telegraf
